<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="playlist_maker">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="practicum_android">
        https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="messageTheme">
        Сообщение разработчикам иразработчицам приложения Playlist Maker</string>
    <string name="messageMail">
        Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="toastMail">На вашем устройстве не настроен почтовый клиент</string>
    <string name="agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="editTextSearch">Поиск</string>
    <string name="no_results">Ничего не нашлось</string>
    <string name="server_error">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="favorite_button_desc">Добавить в избранное</string>
    <string name="play_button_desc">Кнопка воспроизведения</string>
    <string name="add_to_playlist_desc">Добавить в плейлист</string>
    <string name="album_cover_desc">Обложка альбома</string>
    <string name="_0_00">0:00</string>
    <string name="media_empty">Ваша медиатека пуста</string>
    <string name="media_new_playlist">Новый плейлист</string>
    <string name="media_no_playlist">Вы не создали\n ни одного плейлиста</string>
    <string name="favorites">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
</resources>