<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/playlist_maker"
        app:titleTextColor="@color/yp_white"
        app:popupTheme="@style/Base.Theme.PlaylistMaker.StatusBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_16dp"
        android:layout_marginTop="@dimen/_24dp"
        android:layout_marginRight="@dimen/_16dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_search"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="@string/search"
            app:icon="@drawable/search"
            tools:ignore="VisualLintButtonSize"
            style="@style/ButtonActivityMain" />

        <Button
            android:id="@+id/button_media"
            android:layout_marginBottom="@dimen/_8dp"
            android:text="@string/media"
            app:icon="@drawable/media"
            tools:ignore="VisualLintButtonSize"
            style="@style/ButtonActivityMain" />

        <Button
            android:id="@+id/button_settings"
            android:text="@string/settings"
            app:icon="@drawable/settings"
            tools:ignore="VisualLintButtonSize"
            style="@style/ButtonActivityMain" />

    </LinearLayout>

</LinearLayout>