<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:stateListAnimator="@null"
            app:icon="@drawable/back"
            app:iconTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="@dimen/_16dp"
            android:fontFamily="@font/ysdisplay"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_22sp" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_21dp"
            android:layout_marginEnd="@dimen/_100dp"
            android:layout_marginBottom="@dimen/_21dp"
            android:fontFamily="@font/ysdisplay"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_21dp"
            android:layout_marginEnd="@dimen/_100dp"
            android:layout_marginBottom="@dimen/_21dp"
            android:fontFamily="@font/ysdisplay"
            android:text="@string/share"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:stateListAnimator="@null"
            app:icon="@drawable/share"
            app:iconTint="@color/settings_button" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_21dp"
            android:layout_marginEnd="@dimen/_100dp"
            android:layout_marginBottom="@dimen/_21dp"
            android:fontFamily="@font/ysdisplay"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:stateListAnimator="@null"
            app:icon="@drawable/support"
            app:iconTint="@color/settings_button" />

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_21dp"
            android:layout_marginEnd="@dimen/_100dp"
            android:layout_marginBottom="@dimen/_21dp"
            android:fontFamily="@font/ysdisplay"
            android:text="@string/agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:backgroundTint="@color/white"
            android:importantForAccessibility="no"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:stateListAnimator="@null"
            app:icon="@drawable/forward"
            app:iconTint="@color/settings_button" />

    </FrameLayout>

</LinearLayout>