<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MediaActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:navigationIcon="@drawable/back"
        tools:ignore="MissingConstraints" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.13" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.87" />

    <ImageView
        android:id="@+id/albumCover"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_16dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/trackName"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/toolbar_settings"
        app:layout_constraintVertical_chainStyle="packed"
        tools:src="@drawable/track_placeholder" />

    <TextView
        android:id="@+id/trackName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:textColor="@color/textsPlayer"
        android:textSize="@dimen/_22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/albumCover"
        tools:text="Для нее" />

    <TextView
        android:id="@+id/artistName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ellipsize="end"
        android:fontFamily="@font/ys_display_regular"
        android:maxLines="1"
        android:textColor="@color/textsPlayer"
        android:textSize="@dimen/_14sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/trackName"
        tools:text="Гуф" />

    <ImageView
        android:id="@+id/addToPlaylistButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintEnd_toStartOf="@+id/playPauseButton"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton"
        tools:src="@drawable/ic_add_to_playlist" />

    <ImageView
        android:id="@+id/playPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintBottom_toTopOf="@+id/progressTime"
        app:layout_constraintEnd_toStartOf="@+id/favoriteButton"
        app:layout_constraintStart_toEndOf="@+id/addToPlaylistButton"
        app:layout_constraintTop_toBottomOf="@+id/artistName"
        tools:src="@drawable/ic_play" />

    <ImageView
        android:id="@+id/favoriteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/playPauseButton"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton"
        tools:src="@drawable/ic_favorite" />

    <TextView
        android:id="@+id/progressTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:textColor="@color/textsPlayer"
        android:textSize="@dimen/_14sp"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/playPauseButton"
        tools:text="2:43" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/duration"
        android:textColor="@color/yp_text_gray"
        android:textSize="@dimen/_13sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/progressTime" />

    <TextView
        android:id="@+id/durationTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/textsPlayer"
        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="@+id/duration"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/duration"
        tools:text="3:21" />

    <TextView
        android:id="@+id/album"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/album"
        android:textColor="@color/yp_text_gray"
        android:textSize="@dimen/_13sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/duration" />

    <TextView
        android:id="@+id/albumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/textsPlayer"
        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="@+id/album"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/album"
        tools:text="О'пять" />

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/year"
        android:textColor="@color/yp_text_gray"
        android:textSize="@dimen/_13sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/album" />

    <TextView
        android:id="@+id/releaseYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/textsPlayer"
        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="@+id/year"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/year"
        tools:text="2009" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/genre"
        android:textColor="@color/yp_text_gray"
        android:textSize="@dimen/_13sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/year" />

    <TextView
        android:id="@+id/genreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/textsPlayer"
        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="@+id/genre"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/genre"
        tools:text="Рэп" />

    <TextView
        android:id="@+id/country"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8dp"
        android:fontFamily="@font/ys_display_regular"
        android:text="@string/country"
        android:textColor="@color/yp_text_gray"
        android:textSize="@dimen/_13sp"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/genre" />

    <TextView
        android:id="@+id/countryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_regular"
        android:textColor="@color/textsPlayer"
        android:textSize="@dimen/_13sp"
        app:layout_constraintBottom_toBottomOf="@+id/country"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintTop_toTopOf="@+id/country"
        tools:text="Россия" />

</androidx.constraintlayout.widget.ConstraintLayout>